updated splash image (removed text)

--- a/base.css
+++ b/base.css
@@ -91,7 +91,7 @@ article{
 /* Section 1 */
 
 #section-1{
-    background:url(img/eiffel-2.jpg) 50% 0 no-repeat;
+    background:url(img/splash.jpg) 50% 0 no-repeat;
     background-size:cover;
 }
 
