--- a/base.css
+++ b/base.css
@@ -32,10 +32,28 @@ hr{background: #333;border: 0;height: 2px;margin: 12px auto 8px;width: 60px;}
 a{color:#1074ce;text-decoration:none;}
 a:hover{color:#0a487f;}
 
+.logo {
+    padding: 20px;
+}
+
+#nav {
+    display: block;
+    position: fixed;
+    top: 30px;
+    right: 15px;
+}
+
+blockquote {
+    padding: 15px;
+    color:#0a487f;
+    font-size:20px;
+    font-family: 'PT Sans Narrow';
+}
+
 article{
     text-align:center;
     padding:150px 0;
-    width:250px;
+    width:400px;
     margin:0 auto;
 }
 
@@ -98,7 +116,7 @@ article{
     #section-1 header{
         color:#FFF;
         position:absolute;
-        top:30%;
+        top:35%;
         left:50%;
         margin:0 0 0 -350px;
         width:700px;
